2017-12-20 Magnus Hagdorn
 * piccolo2/player/SpectraList.py: sort out new file pattern

2017-12-18 Magnus Hagdorn
 * piccolo2/player/PlayerApp.py: get integration time source and colour cell
   accordingly

2017-12-13 Magnus Hagdorn
 * piccolo2/player/PlayerApp.py: handle extended status

2017-12-12 Magnus Hagdorn
 * piccolo2/player/PlayerApp.py: update output Directory when notified it
   changed by the server

2017-12-12 Magnus Hagdorn
 * piccolo2/player/PlayerApp.py: set run name to the latest one used; hook up
   Runs button
 * piccolo2/player/player.ui: add button to select run
 * piccolo2/player/RunList.py: new dialog for selecting run
 * piccolo2/player/runlist.ui: UI for new dialog

2017-12-11 Magnus Hagdorn
 * piccolo2/player/PlayerApp.py: hook up quiet time dialog
 * piccolo2/player/Schedule.py: disable spinboxes when repeat is disabled
 * piccolo2/player/player.ui: add new menu item
 * piccolo2/player/QuietTime.py: new dialog to support quiet time
 * piccolo2/player/quiettime.ui: UI for new dialog

2017-12-05 Magnus Hagdorn
 * piccolo2/player/PlayerApp.py: autointegration can happen a number of times
 * piccolo2/player/player.ui: add spin box to select how often autointegration
   happens

2017-11-22 Magnus Hagdorn
 * piccolo2/player/PlayerApp.py: add columns to set minimum and maximum
   integration time per spectrometer

2017-11-06 Magnus Hagdorn
 * piccolo2/pplayer.py: add option to print version

2017-11-06 Magnus Hagdorn
 * piccolo2/player/__init__.py: set __version__
 * setup.py: get version from hg tag

2017-02-27 Magnus Hagdorn
 * piccolo2/player/PlayerApp.py: fail gracefully if player becomes
   disconnected
 * piccolo2/player/ScheduleList.py: ditto

2017-02-27 Magnus Hagdorn
 * piccolo2/player/PlayerApp.py: use new dialog to select spectrum
 * piccolo2/player/player.ui: use push button to select spectrum
 * piccolo2/player/SpectraList.py: new dialog to select spectrum
 * piccolo2/player/spectralist.ui: ui for new dialog
